--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,83 @@
 *{
-  padding: 5px;
-  /* background-image: url('/src/pages/images/home-background.jpeg');
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  
+}
+
+body{
+  background-image: url('./pages/images/home-background.jpeg');
+  background-size: cover;
+}
+.home-background{
+  text-align: center;
+  padding-top: 15em;
+  color: white;
+  /* background-image: url('./pages/images/home-background.jpeg');
   background-size: cover; */
+  
+}
+.nav-link a:hover{
+  background-color: pink;
+}
+.about-header{
+  color: white;
+  text-align: center;
+  padding-top:0.5em;
+  font-size: 10em;;
+}
+.about-container{
+  max-width: 50%;
+  color: white;
+  padding: 0.7em;
+  padding-top:4.5em;
+
+}
+
+.about-me{
+  font-size: 1.2em;
+ 
+  text-align: justify;
+  font-weight: bold;
 }
 
 
-.background{
-  text-align: center;
-  padding-top: 20em;;
+
+
+/* animation1 */
+
+.reveal-1{
+  overflow: hidden;
+  line-height: 1;
+}
+.reveal-1 span{
+  display: block;
+  animation: reveal 1.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s;
+}
+/* animation2 */
+.reveal-2{
+  overflow: hidden;
+  line-height: 3;
+}
+.reveal-2 span{
+  display: block;
+  animation: reveal 3s cubic-bezier(0.77, 0, 0.175, 1) 0.5s;
+}
+
+.reveal-3{
+  overflow: hidden;
+  line-height: 4;
+}
+.reveal-3 span{
+  display: block;
+  animation: reveal 4.5s cubic-bezier(0.77, 0, 0.275, 1) 0.5s;
+}
+
+@keyframes reveal {
+  0% {
+    transform: translate(0,100%);
+  }
+  100% {
+    transform: translate(0,0);
+  }
 }
